--- a/pom.xml
+++ b/pom.xml
@@ -7,4 +7,14 @@
   <modules>
   	<module>spring-demo-01</module>
   </modules>
+  
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>4.3.9.RELEASE</version>
+		</dependency>
+	</dependencies>
+  
+  
 </project>
