添加IOC的三种

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,12 @@
 /spring-demo-01/.classpath/
 /spring-demo-01/.project/
 
+/spring-ioc-01/.settings/
+/spring-ioc-01/target/
+/spring-ioc-01/.classpath/
+/spring-ioc-01/.project/
+
+
+
 
 
