--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@
 /spring-ioc-01/.classpath/
 /spring-ioc-01/.project/
 
+/spring-di-01/.settings/
+/spring-di-01/target/
+/spring-di-01/.classpath/
+/spring-di-01/.project/
+
 
 
 
