--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <modules>
   	<module>spring-demo-01</module>
   	<module>spring-ioc-01</module>
+	<module>spring-di-01</module>	
   </modules>
   
 	<dependencies>
