循环依赖于集合注入

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,18 @@
 /spring-di-01/.project/
 
 
+/spring-di-02/.settings/
+/spring-di-02/target/
+/spring-di-02/.classpath/
+/spring-di-02/.project/
+
+/spring-di-03/.settings/
+/spring-di-03/target/
+/spring-di-03/.classpath/
+/spring-di-03/.project/
+
+
+
 
 
 
