--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
   	<module>spring-demo-01</module>
   	<module>spring-ioc-01</module>
 	<module>spring-di-01</module>	
+	<module>spring-di-02</module>
+    <module>spring-di-03</module>		
   </modules>
   
 	<dependencies>
