添加自动扫描容器

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,11 @@
 /spring-di-03/.classpath/
 /spring-di-03/.project/
 
+/spring-di-04/.settings/
+/spring-di-04/target/
+/spring-di-04/.classpath/
+/spring-di-04/.project/
+
 
 
 
