--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<module>spring-di-02</module>
     <module>spring-di-03</module>
     <module>spring-di-04</module>
+	<module>spring-bean-scope</module>
   </modules>
   
 	<dependencies>
