配置的方式实现aop

--- a/.gitignore
+++ b/.gitignore
@@ -38,12 +38,18 @@
 /spring-bean-scope/.project
 /spring-bean-scope/.gitignore
 
-
 /spring-aop-01/.settings/
 /spring-aop-01/target/
 /spring-aop-01/.classpath
 /spring-aop-01/.project
 /spring-aop-01/.gitignore
+
+/spring-aop-02/.settings/
+/spring-aop-02/target/
+/spring-aop-02/.classpath
+/spring-aop-02/.project
+/spring-aop-02/.gitignore
+
 
 
 
