--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 	<module>spring-bean-scope</module>
 	<module>spring-proxy</module> 
 	<module>spring-aop-01</module>
+	<module>spring-aop-02</module>
   </modules>
   
 	<dependencies>
