--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,14 @@
 /spring-rmi-api/.gitignore
 
 
+/spring-jdbc-01/.settings/
+/spring-jdbc-01/target/
+/spring-jdbc-01/.classpath
+/spring-jdbc-01/.project
+/spring-jdbc-01/.gitignore
+
+
+
 
 
 
